# safe-stack

./: .gitignore  CMakeLists.txt  README.md
include/: stack.h
src/: stack.c
test/: test_stack.c
